# fastapit-with-td

./: Makefile  README.md  docker-compose.yml  pyproject.toml  testes.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/schemas/: conftest.py  factories.py  test_product.py
tests/usecases/: test_product.py
