[tool.poetry]
name = "fastapi tdd project"
version = "0.0.1"
description = "Projeto usando FastApi e TDD"
authors = ["flbparra <fabiolbparra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.8.2"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.3.4"
motor = "^3.5.1"
pre-commit = "^3.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addops = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
